Before changing  recalcEquilibriumLengths to be based on stretch

--- a/Truss.html
+++ b/Truss.html
@@ -86,7 +86,8 @@
 				tn.truss.initConnect();
 				mainNode.truss.addNode(tn); */
 
-				return setInterval(draw, mainNode.truss.updateFrequency*1000);
+				// return setInterval(draw, mainNode.truss.updateFrequency*1000);
+				window.requestAnimationFrame(draw);
 			}
 
 
