--- a/Truss.html
+++ b/Truss.html
@@ -1,48 +1,49 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8" />
-<script src="Javascript/Primitives.js" type="text/javascript"></script>
-<script src="Javascript/View.js" type="text/javascript"></script>
-<script src="Javascript/Node.js" type="text/javascript"></script>
-<script src="Javascript/Tensors.js" type="text/javascript"></script>
-<script src="Javascript/Truss.js" type="text/javascript"></script>
-<script src="Javascript/Actuators.js" type="text/javascript"></script>
-<script src="Javascript/Sensors.js" type="text/javascript"></script>
-<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
-<script src="Javascript/jquery-3.1.1.js"></script> 
+	<meta charset="UTF-8" />
+	<script src="Javascript/Primitives.js" type="text/javascript"></script>
+	<script src="Javascript/View.js" type="text/javascript"></script>
+	<script src="Javascript/Node.js" type="text/javascript"></script>
+	<script src="Javascript/Tensors.js" type="text/javascript"></script>
+	<script src="Javascript/Truss.js" type="text/javascript"></script>
+	<script src="Javascript/Actuators.js" type="text/javascript"></script>
+	<script src="Javascript/Sensors.js" type="text/javascript"></script>
+	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
+	<script src="Javascript/cycle.js" type="text/javascript"></script>
+	<script src="Javascript/jquery-3.1.1.js"></script>
 
-<link rel="stylesheet" type="text/css" href="../Stylefiles/Truss.css">
+	<link rel="stylesheet" type="text/css" href="../Stylefiles/Truss.css">
 
-<!-- <link rel="icon" type="image/png" href="../Pictures/Atlas white logotype.png" />
+	<!-- <link rel="icon" type="image/png" href="../Pictures/Atlas white logotype.png" />
 <link rel="shortcut icon" href="../Pictures/Atlas white logotype.png" />
  -->
 
-<title>Truss</title>
+	<title>Truss</title>
 
 </head>
+
 <body style="background-color: #343f48;">
 	<section>
-		<div id ="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
+		<div id="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
 			abc
 		</div>
 		<table class="tg">
 			<tr>
 				<!-- Graphic editing window -->
-				<th class="tg-2ktp" colspan="6"
-					style="border-color: black; border-style: solid; border-width: 0px;">
+				<th class="tg-2ktp" colspan="6" style="border-color: black; border-style: solid; border-width: 0px;">
 					<div>
 
 						<div id="TrussBackground" align="left">
-							
+
 						</div>
 
 					</div>
 				</th>
 				<!-- Info window -->
 
-				<th class="tg-fbi7" rowspan="5"
-					style="border-color: black; border-style: solid; border-width: 0px;">
+				<th class="tg-fbi7" rowspan="5" style="border-color: black; border-style: solid; border-width: 0px;">
 
 				</th>
 
@@ -54,52 +55,85 @@
 
 
 		<script type="text/javascript">
-
-			var canvas;
-			var ctx;
-			var WIDTH = 2000;
-			var HEIGHT = 1000;
-			var mainView;
 			var mainNode;
+			var savedState = 0;
+
+			var tensors,nodes;
 
 			//Main Draw loop
-			var lastFrameTimeMs = 0;
-
 			function mainLoop(timestamp) {
-				mainNode.tick(timestamp/1000);
+				mainNode.tick(timestamp / 1000);
 				requestAnimationFrame(mainLoop);
+				tensors = mainNode.makeTensorList();
+				nodes = mainNode.makeNodeList();
+				mainNode.serialize(nodes, tensors);
 			}
 
 			// Setting up the canvas and ensure other initialization routines are run
 			function init() {
+				let WIDTH = 2000;
+				let HEIGHT = 1000;
 				FPSdisplay = document.getElementById("FPSdisplay");
 
-				mainView = new View(new Vector(WIDTH,HEIGHT), new Vector(18,9));
-				mainNode = new TrussNode(new Position(0,0), mainView, 0.01,1, "MainNode")
-				mainNode.truss = new WalkTruss(mainView, 1/60);
+				let mainView = new View(new Vector(WIDTH, HEIGHT), new Vector(18, 9));
+				mainNode = new TrussNode(new Position(0, 0), mainView, 0.01, 1, "MainNode")
+				mainNode.truss = new WalkTruss(mainView, 1 / 60);
 
-				
-/* 
-				var vw= new View(new Vector(200,100), new Vector(2,1))
-				var tn= new TrussNode(new Position(200,20), vw, 0.01, 10, "SubTruss", 
-						function(node, tick){
-							return new Position(2+0.5*Math.sin(tick),0.3)
-					}); 
-				var sn1 = tn.truss.addNode(new Node(new Position(1, 0.1), 10, "subnode1")); 
-				var sn2 = tn.truss.addNode(new Node(new Position(1, 0.2), 10, "subnode2")); 
-				tn.truss.addTensor(new Spring(sn1, sn2, 100,0.5));
-				tn.truss.initConnect();
-				mainNode.truss.addNode(tn); */
+
+				/* 
+								var vw= new View(new Vector(200,100), new Vector(2,1))
+								var tn= new TrussNode(new Position(200,20), vw, 0.01, 10, "SubTruss", 
+										function(node, tick){
+											return new Position(2+0.5*Math.sin(tick),0.3)
+									}); 
+								var sn1 = tn.truss.addNode(new Node(new Position(1, 0.1), 10, "subnode1")); 
+								var sn2 = tn.truss.addNode(new Node(new Position(1, 0.2), 10, "subnode2")); 
+								tn.truss.addTensor(new Spring(sn1, sn2, 100,0.5));
+								tn.truss.initConnect();
+								mainNode.truss.addNode(tn); */
 
 				//return setInterval(draw, mainNode.truss.updateFrequency*1000);
 				window.requestAnimationFrame(mainLoop);
+
+
+
+				mainView.context.canvas.onmousemove = myMove;
+				mainView.context.canvas.onmousedown = downMouse;
+				mainView.context.canvas.onmouseup = upMouse;
 			}
 
 
 			// Make sure the init is not run until all is set up
 			$().ready(init);
+
+
+			let myX = 3;
+			let myY = 3;
+			let mouseSet = false;
+			/**
+			 * @param  {Event} e
+			 */
+			function myMove(e) {
+				myX = e.pageX;
+				myY = e.pageY;
+			}
+
+			/**
+			 * @param  {Event} e
+			 */
+			function downMouse(e) {
+				mouseSet = true;
+			}
+
+			/**
+			 * @param  {Event} e
+			 */
+			function upMouse(e) {
+				mouseSet = false;
+			}
 		</script>
 
 	</section>
 </body>
+
 </html>
