--- a/Truss.html
+++ b/Truss.html
@@ -10,6 +10,7 @@
 	<script src="Javascript/Truss.js" type="text/javascript"></script>
 	<script src="Javascript/Actuators.js" type="text/javascript"></script>
 	<script src="Javascript/Sensors.js" type="text/javascript"></script>
+	<script src="Javascript/Pictures.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
 	<!--	<script src="Javascript/cycle.js" type="text/javascript"></script>
 	<script src="Javascript/jquery-3.1.1.js"></script>  -->
@@ -25,10 +26,16 @@
 </head>
 
 <body style="background-color: #343f48;">
+	<img id="dimage" src="Resources/facade.jpg" style="position: absolute; left:0px; top:0px; width: 100px; height: 100px;" alt="Mountain View">
 	<section>
+
 		<div id="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
 
 		</div>
+		<br>
+		<br>
+
+		<input type="button" value="rotate" onclick="settrans();" style="position: absolute; left:200px; top:10px; color: white;">
 		<table class="tg">
 			<tr>
 				<!-- Graphic editing window -->
@@ -127,6 +134,12 @@
 			}
 
 			init();
+
+
+			function settrans() {
+				warpMatrix(document.getElementById("dimage"), {"x": 250,"y": 250} , {"x": 650,"y": 100} , {"x": 100,"y": 700} , {"x": 1000,"y": 1050} );
+			}
+
 		</script>
 
 	</section>
