Making pictures tied to nodes work

--- a/Truss.html
+++ b/Truss.html
@@ -25,17 +25,13 @@
 
 </head>
 
-<body style="background-color: #343f48;">
-	<img id="dimage" src="Resources/facade.jpg" style="position: absolute; left:0px; top:0px; width: 100px; height: 100px;" alt="Mountain View">
+<body style="background-color: #343f48; margin:0px;">
+	<img id="dimage" src="Resources/facade.jpg" style="position: absolute; left:0px; top:0px; width: 200px; height: 200px;" alt="Mountain View">
 	<section>
 
 		<div id="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
 
 		</div>
-		<br>
-		<br>
-
-		<input type="button" value="rotate" onclick="settrans();" style="position: absolute; left:200px; top:10px; color: white;">
 		<table class="tg">
 			<tr>
 				<!-- Graphic editing window -->
