--- a/Truss.html
+++ b/Truss.html
@@ -31,10 +31,9 @@
 	
 	<section>
 
-		<div id="configview" style="position: absolute; z-index:1000; color: green; width:200px; height:200px; background-color:red;">
-			Hej
-			<button type="button" onclick="alert('Hello')">Click Me!</button>
-			<input name="testf" type="text" value="xxx"> 
+		<div class="" id="configarea" style="position: absolute; z-index:1000; color: green; width:400px; height:200px;">
+			<div class="sectionheader">Configuration</div>
+			<div class="sectionbase" id="configview"></div>
 		</div>
 
 		<div id="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
