--- a/Truss.html
+++ b/Truss.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<script src="Javascript/Primitives.js" type="text/javascript"></script>
+	<script src="Javascript/FileSave.js" type="text/javascript"></script>
+	<script src="Javascript/FileLoad.js" type="text/javascript"></script>
 	<script src="Javascript/Property.js" type="text/javascript"></script>
 	<script src="Javascript/View.js" type="text/javascript"></script>
 	<script src="Javascript/Node.js" type="text/javascript"></script>
@@ -27,18 +29,75 @@
 </head>
 
 <body style="background-color: #343f48; margin:0px;">
-	<img id="dimage" src="Resources/facade.jpg" style="position: absolute; left:0px; top:0px; width: 200px; height: 200px; " alt="Mountain View">
-	
+	<img id="dimage" src="Resources/facade.jpg" style="position: absolute; left:0px; top:0px; width: 200px; height: 200px; "
+	    alt="Mountain View">
+
 	<section>
 
-		<div class="" id="configarea" style="position: absolute; z-index:1000; color: green; width:400px; height:200px;">
-			<div class="sectionheader">Configuration</div>
-			<div class="sectionbase" id="configview"></div>
+		<div class="" id="configarea" style="position: absolute; z-index:1000; color: pink; width:500px; height:300px;">
+
+			<div class="tab">
+				<button class="tablinks tabsectionheader" id="propertiesButton" onclick="openBottomPanel(event, 'propertiesDiv')">PROPERTIES</button>
+				<button class="tablinks tabsectionheader" id="addButton" onclick="openBottomPanel(event, 'addDiv')">ADD</button>
+				<button class="tablinks tabsectionheader" onclick="openBottomPanel(event, 'generalDiv'); ">GENERAL</button>
+				<button class="tablinks tabsectionheader advanced" onclick="openBottomPanel(event, 'fileDiv')">FILE</button>
+			</div>
+
+			<div id="propertiesDiv" class="footerbackgroundarea tabcontent">
+				<!--- div class="sectionheader">Configuration</div> -->
+				<div class="sectionbase" id="configview"></div>
+				<div>
+					<button type="button" onclick="mainNode.togglePause()">Pause</button>
+					<button type="button" onclick="mainNode.toggleMove()">Move</button>
+				</div>
+			</div>
+
+			<div id="addDiv" class="footerbackgroundarea tabcontent">
+				<!--- div class="sectionheader">Configuration</div> -->
+				<button type="button">New Node</button>
+				<button type="button">New Tensor</button>
+			</div>
+
+			<div id="generalDiv" class="footerbackgroundarea tabcontent">
+				Hehe
+			</div>
+			<div id="fileDiv" class="footerbackgroundarea tabcontent">
+
+					<div class="valuepair">
+							<div title="Filename" class="lname">Filename</div>
+							<div class="rvalue">' +
+							<input class="text" type="text" id="fileNameInput" value="myFile"
+							 style="text-align: right; width:140px;">
+							</div>
+							</div>
+
+
+
+				<button type="button"  onclick="saveFile(document.getElementById('fileNameInput').value);">Save</button>
+				<button type="button">Load</button>
+			</div>
+
+
 		</div>
+
 
 		<div id="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
 		</div>
-
+		<!-- 
+		<div class="positionEditArea" id="dfg">
+			<div class="valuepair" style="float: left;">
+				<div title="x" class="lname">X</div>
+				<div class="rvalue">
+					<input class="text" type="text" id="alpha" value="30">
+				</div>
+			</div>
+			<div class="valuepair" style="float: right;">
+				<div title="y" class="lname">Y</div>
+				<div class="rvalue">
+					<input class="text" type="text" id="beta" value="40">
+				</div>
+			</div>
+		</div> -->
 
 		<div id="TrussBackground" align="left">
 
@@ -80,7 +139,7 @@
 				mainNode.truss.initiate();
 
 
-				selectedObject=mainNode;
+				selectedObject = mainNode;
 
 				window.requestAnimationFrame(mainLoop);
 
@@ -121,8 +180,39 @@
 				mouseSet = false;
 			}
 
-			init();
 
+
+			function openBottomPanel(evt, divName) {
+				// Declare all variables
+				var i, tabcontent, tablinks;
+
+				// Get all elements with class="tabcontent" and hide them
+				tabcontent = document.getElementsByClassName("tabcontent");
+				for (i = 0; i < tabcontent.length; i++) {
+					tabcontent[i].style.display = "none";
+				}
+
+				// Get all elements with class="tablinks" and remove the class "active"
+				tablinks = document.getElementsByClassName("tablinks");
+				for (i = 0; i < tablinks.length; i++) {
+					tablinks[i].className = tablinks[i].className.replace(
+						" active", "");
+				}
+
+				// Show the current tab, and add an "active" class to the button that opened the tab
+				document.getElementById(divName).style.display = "block";
+
+				if (evt)
+					evt.currentTarget.className += " active";
+				else
+					document.getElementById("propertiesButton").className += " active";
+			}
+
+
+
+
+
+			init();
 		</script>
 
 	</section>
