--- a/Truss.html
+++ b/Truss.html
@@ -37,7 +37,7 @@
 
 			<div class="tab">
 				<button class="tablinks tabsectionheader" id="propertiesButton" onclick="openBottomPanel(event, 'propertiesDiv')">PROPERTIES</button>
-				<!-- <button class="tablinks tabsectionheader" id="propertiesButton" onclick="openBottomPanel(event, 'connectionDiv');">CONNECTIONS</button> -->
+				<!-- <button class="tablinks tabsectionheader" id="propertiesButton" onclick="openBottomPanel(event, 'connectionDiv');">CONNECTIONS</button>
 				<button class="tablinks tabsectionheader" id="addButton" onclick="openBottomPanel(event, 'addDiv')">ADD</button>
 				<!-- <button class="tablinks tabsectionheader" onclick="openBottomPanel(event, 'generalDiv'); ">GENERAL</button> -->
 				<button class="tablinks tabsectionheader advanced" onclick="openBottomPanel(event, 'fileDiv'); directory('Saves');">FILE</button>
@@ -54,16 +54,34 @@
 				<div id="addDiv" class="sectionbase">
 						<!-- div class="sectionheader">Configuration</div> -->
 						<div>
-							<button class="simpleButton" type="button">New Node</button>
+							<select id='nodeType' oninput=''>
+								<option value='Node'>Node</option>
+								<option value=''>--Sensors--</option>
+								<option value='KeySensorNode'>KeySensor</option>
+								<option value='ProximitySensornODE'>ProximitySensor</option>
+								<option value=''>--Actuators--</option>
+								<option value='jumpNode'>JumpNodeActuator</option>
+								<option value='LeftRightNode'>LeftRightActuator</option>
+								<option value='Linebreakernode'>LinebreakerActuator</option>
+								</select>
+							<button class="simpleButton" type="button" onclick="makeNode()">Create</button>
 						</div>
 						<div>
-							<button class="simpleButton" type="button">New Tensor</button>
+								<select id='tensorType' oninput=''>
+										<option value='Spring'>Spring</option>
+										<option value='PullSpring'>PullSpring</option>
+									<option value='Absorber'>Absorber</option>
+									<option value='Field'>Field</option>
+									</select>
+							<button class="simpleButton" type="button" onclick="makeTensor()">Create</button>
 						</div>
 					</div>
 		
 				<div>
 					<button class="simpleButton" type="button" onclick="mainNode.togglePause()">Pause</button>
 					<button class="simpleButton" type="button" onclick="mainNode.toggleMove()">Lock</button>
+					<button class="simpleButton" type="button" onclick="addGravityCheat();">Gravity</button>
+					<button class="simpleButton" type="button" onclick="">Delete</button>
 				</div>
 			</div>
 
@@ -107,21 +125,7 @@
 
 		<div id="FPSdisplay" style="position: absolute; left:10px; top:10px; color: white;">
 		</div>
-		<!-- 
-		<div class="positionEditArea" id="dfg">
-			<div class="valuepair" style="float: left;">
-				<div title="x" class="lname">X</div>
-				<div class="rvalue">
-					<input class="text" type="text" id="alpha" value="30">
-				</div>
-			</div>
-			<div class="valuepair" style="float: right;">
-				<div title="y" class="lname">Y</div>
-				<div class="rvalue">
-					<input class="text" type="text" id="beta" value="40">
-				</div>
-			</div>
-		</div> -->
+	
 
 		<div id="TrussBackground" align="left">
 
@@ -265,6 +269,44 @@
 				connectionDiv.appendChild(select.generateconnectionHTML());
 			}
 
+			function makeNode() {
+				let selector = document.getElementById('nodeType');
+				let value = selector.value;
+				if (value == 'Node') {
+					mainNode.truss.addNode(new Node(new Position(1, 1), 10, 'node'));
+				}
+			}
+
+			var connectionTensor;
+
+			function makeTensor() {
+				let selector = document.getElementById('tensorType');
+				let value = selector.value;
+				if (value == 'Spring') {
+					connectionTensor=mainNode.truss.addTensor(new Spring(selectedObject, sensor, 100));
+					
+				document.addEventListener('selectionEvent',
+					function (e) {
+						if (connectionTensor) {
+							attach(connectionTensor);
+							connectionTensor=undefined;
+						}
+						
+					}, false);
+				}
+			}
+
+			function attach(tensor) {
+				if (tensor.node1==sensor) {
+					tensor.addNode1(selectedObject);
+				} else if (tensor.node2==sensor) {
+					tensor.addNode2(selectedObject);
+				} 
+			}
+
+			function addGravityCheat() {
+				mainNode.truss.addTensor(gravityField(selectedObject));
+			}
 
 			init();
 		</script>
