--- a/Truss.html
+++ b/Truss.html
@@ -66,7 +66,7 @@
 								</select>
 							<button class="simpleButton" type="button" onclick="makeNode()">Create</button>
 						</div>
-						<div>
+						<div id="tensorAdder">
 								<select id='tensorType' oninput=''>
 										<option value='Spring'>Spring</option>
 										<option value='PullSpring'>PullSpring</option>
@@ -80,7 +80,7 @@
 				<div>
 					<button class="simpleButton" type="button" onclick="mainNode.togglePause()">Pause</button>
 					<button class="simpleButton" type="button" onclick="mainNode.toggleMove()">Lock</button>
-					<button class="simpleButton" type="button" onclick="addGravityCheat();">Gravity</button>
+					<button id="gravityButton" class="simpleButton" type="button" onclick="addGravityCheat();">Gravity</button>
 					<button class="simpleButton" type="button" onclick="">Delete</button>
 				</div>
 			</div>
@@ -179,6 +179,8 @@
 
 				let configarea = document.getElementById('configarea');
 				let connectionDiv = document.getElementById('connectionDiv');
+				let gravitybutton = document.getElementById('gravitybutton');
+				let tensorAdder = document.getElementById('tensorAdder');
 				
 
 				document.addEventListener('selectionEvent',
@@ -267,6 +269,15 @@
 				}
 				connectionDiv.innerHTML = '';
 				connectionDiv.appendChild(select.generateconnectionHTML());
+
+				if (select.isNode) {
+					gravityButton.style.display='inline';
+					tensorAdder.style.display='inline';
+				} else {
+					gravityButton.style.display='none';
+					tensorAdder.style.display='none';
+
+				}
 			}
 
 			function makeNode() {
@@ -289,14 +300,14 @@
 					connectionTensor=mainNode.truss.addTensor(new PullSpring(selectedObject, sensor, 100));
 				}
 				else if (value == 'Absorber') {
-					connectionTensor=mainNode.truss.addTensor(new Absorber(selectedObject, sensor, 100));
+					connectionTensor=mainNode.truss.addTensor(new Absorber(selectedObject, sensor, 1));
 				}
 				else if (value == 'Field') {
 					connectionTensor=mainNode.truss.addTensor(new Field(selectedObject, sensor, 100));
 				}
 			document.addEventListener('selectionEvent',
 					function (e) {
-						if (connectionTensor) {
+						if (connectionTensor && selectedObject.isNode) {
 							attach(connectionTensor);
 							connectionTensor=undefined;
 						}
