Moving into folder and  adding icon

--- a/Truss.html
+++ b/Truss.html
@@ -6,21 +6,23 @@
 	<script src="Javascript/Primitives.js" type="text/javascript"></script>
 	<script src="Javascript/FileSave.js" type="text/javascript"></script>
 	<script src="Javascript/View.js" type="text/javascript"></script>
-	<script src="Javascript/Node.js" type="text/javascript"></script>
+	<script src="Javascript/Nodes/Node.js" type="text/javascript"></script>
+	<script src="Javascript/Nodes/CollectionNode.js" type="text/javascript"></script>
+	<script src="Javascript/Nodes/PictureNode.js" type="text/javascript"></script>
+	<script src="Javascript/Nodes/TrussNode.js" type="text/javascript"></script>
 	<script src="Javascript/Tensors.js" type="text/javascript"></script>
 	<script src="Javascript/Truss.js" type="text/javascript"></script>
-	<script src="Javascript/Actuators.js" type="text/javascript"></script>
-	<script src="Javascript/Sensors.js" type="text/javascript"></script>
-	<script src="Javascript/Property.js" type="text/javascript"></script>
+	<script src="Javascript/Nodes/Actuators.js" type="text/javascript"></script>
+	<script src="Javascript/Nodes/Sensors.js" type="text/javascript"></script>
+	<script src="Javascript/ParameterEditor/Property.js" type="text/javascript"></script>
+	<script src="Javascript/ParameterEditor/BannerNode.js" type="text/javascript"></script>
 	<script src="Javascript/Pictures.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
-	<!--	<script src="Javascript/cycle.js" type="text/javascript"></script>
-	<script src="Javascript/jquery-3.1.1.js"></script>  -->
 
 	<link rel="stylesheet" type="text/css" href="../Stylefiles/Truss.css">
 
-	<!-- <link rel="icon" type="image/png" href="../Pictures/Atlas white logotype.png" />
-<link rel="shortcut icon" href="../Pictures/Atlas white logotype.png" />  -->
+	<link rel="icon" type="image/png" href="../Resources/trussIcon.png" />
+	<link rel="shortcut icon" href="../Resources/trussIcon.png" />  
 
 
 	<title>Truss</title>
